<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="done">Done</string>
    <string name="apartment">Apartment</string>
    <string name="new_property">new</string>
    <string name="upcoming">Upcoming</string>
    <string name="ongoing">ongoing</string>
    <string name="project_status">PROJECT STATUS</string>
    <string name="ready">ready</string>
    <string name="villa">Villa</string>
    <string name="plots">Plots</string>
    <string name="commercial">Commercial</string>
    <string name="apply">APPLY</string>
    <string name="single_family">Single Family</string>
    <string name="multi_family">Multi Family</string>
    <string name="land">Land</string>
    <string name="facebook_app_id">178411629253542</string>
    <string name="fb_login_protocol_scheme">fb178411629253542</string>
    <string name="app_name">clicbrics</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_login">Login</string>
    <string name="degree">\u00B0</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country_code">+91</string>
    <string name="agree_terms_text">I agree to</string>
    <string name="terms_and_conditions">
        <u>Terms &amp; Conditions</u>
    </string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email_id_hint">Email-id</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="referral_code">Referral Code</string>
    <string name="housing">Housing</string>
    <string name="email_id_or_mobile_hint">Email / Phone</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_hyperlink">
        <u>Login</u>
    </string>
    <string name="forgot_password_underscore">
        <u>Forgot Password?</u>
    </string>
    <string name="or">OR</string>
    <string name="google_map_api_key">AIzaSyB3u9sru_Q-SywEC_fAFrwAwMZdvy3EBiU</string>
    <string name="autocomplete_hint">Place name or address</string>
    <string name="anywhr">ANYWHERE</string>
    <string name="recent">Recent</string>
    <string name="recent_locations">Recent Locations</string>
    <string name="title_activity_property">Property List</string>
    <string name="please_wait">Please wait..</string>
    <string name="title_activity_filter">Filter</string>
    <string name="price_range">Price Range (\u20B9)</string>
    <string name="view_filter">SEARCH</string>
    <string name="reset">Reset</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="area">Area(sq ft)</string>
    <string name="beds">Beds</string>
    <string name="baths">Baths</string>
    <string name="property_type">PROPERTY TYPE</string>
    <string name="min_range">Min</string>
    <string name="network_error_msg">Please check network connection.</string>
    <string name="retry">TRY AGAIN</string>
    <string name="try_again">Please try again</string>
    <string name="view_list">
        <b>VIEW LIST</b>
    </string>
    <string name="save_search">SAVE SEARCH</string>
    <string name="splash_text">EVERYONE\'S PRIVATE PROPERTY AGENT</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="shared_with_frnd">SHARE</string>
    <string name="about_us">ABOUT US</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_cannot_be_empty">password cannot be empty!</string>
    <string name="email_cannot_be_empty">email cannot be empty!</string>
    <string name="invalid_emailid">Invalid emailId</string>
    <string name="zoom_in_error_msg">Please zoom in to see your results</string>
    <string name="no_project_found">No Project Found</string>
    <string name="no_saved_search_found">No saved search found</string>
    <string name="no_activity_found">No Activity Found</string>
    <string name="draw_msg">Draw to search on the map.</string>
    <string-array name="price_array">
        <item>₹ 0</item>
        <item>₹ 10 L</item>
        <item>₹ 20 L</item>
        <item>₹ 30 L</item>
        <item>₹ 40 L</item>
        <item>₹ 50 L</item>
        <item>₹ 60 L</item>
        <item>₹ 70 L</item>
        <item>₹ 80 L</item>
        <item>₹ 90 L</item>
        <item>₹ 1 Cr</item>
        <item>₹ 1.10 Cr</item>
        <item>₹ 1.20 Cr</item>
        <item>₹ 1.30 Cr</item>
        <item>₹ 1.40 Cr</item>
        <item>₹ 1.50 Cr</item>
        <item>₹ 1.60 Cr</item>
        <item>₹ 1.70 Cr</item>
        <item>₹ 1.80 Cr</item>
        <item>₹ 1.90 Cr</item>
        <item>₹ 2 Cr</item>
        <item>Any</item>
    </string-array>
    <string-array name="area_array">
        <item>500 sqft</item>
        <item>1000 sqft</item>
        <item>1500 sqft</item>
        <item>2000 sqft</item>
        <item>3000 sqft</item>
        <item>4000 sqft</item>
        <item>5000 sqft</item>
        <item>Any</item>
    </string-array>
    <string-array name="sort_arry">
        <item>Sort by</item>
        <item>Price</item>
        <item>Distance</item>
    </string-array>
    <string name="could_not_get_package_name">"could not get package name: "</string>
    <string name="logging_in">Logging In…</string>
    <string name="google_auth_error">Unable to authenticate from google</string>
    <string name="name_cannot_be_empty">Name cannot be empty!</string>
    <string name="phone_no_cannot_be_empty">Phone no cannot be empty!</string>
    <string name="invalid_phone_no">Invalid phone no</string>
    <string name="cannot_connect">Can\'t connect.</string>
    <string name="error">Error</string>
    <string name="otp_msg">Please type the verification code sent to</string>
    <string name="waiting_for_otp">Waiting for OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="submit">Submit</string>
    <string name="signup_error">Unable to complete registration. Please try again!</string>
    <string name="resending_otp">Resending OTP…</string>
    <string name="unable_to_process_request">Unable to process your request, Please retry.</string>
    <string name="verifying_user">Verifying user…</string>
    <string name="otp_should_not_be_empty">OTP should not be empty!</string>
    <string name="no_trusted_contact">No Trusted Contact</string>
    <string name="trusted_contacts">TRUSTED CONTACTS</string>
    <string name="mobile">MOBILE</string>
    <string name="work_email">Work Email</string>
    <string name="email">EMAIL</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="trusted_contacts_add">"Trusted Contacts Add "</string>
    <string name="profile">Profile</string>
    <string name="logout_msg">Logging out…</string>
    <string name="ga_event_category">event</string>
    <string name="ga_button_category">button_click</string>
    <string name="internet_is_very_slow">Unable to process your request, please check network connection.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_password">DON\'T HAVE A PASSWORD?</string>
    <string name="get_password">Get Password</string>
    <string name="unable_to_process">Unable to process your request, please retry.</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_does_not_match">Password does not match.</string>
    <string name="network_error_title">Can\'t connect.</string>
    <string name="password_has_been_changed">Password changed successfully.</string>
    <string name="close">Close</string>
    <string name="invalid_name">Invalid name!</string>
    <string name="name_error">Enter valid name.</string>
    <string name="mobile_error">Enter valid mobile number.</string>
    <string name="email_error">Enter valid email address.</string>
    <string name="contact_already_exist">Contact already exists!</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_image">Select Image</string>
    <string name="edit_image">Edit Image</string>
    <string name="send_password">SEND PASSWORD</string>
    <string name="email_sent">"Email sent "</string>
    <string name="login_msg">Logging in…</string>
    <string name="confirm">Confirm</string>
    <string name="contact_must_have_contact_no_or_emailid">Contact must have contact no or emailId</string>
    <string name="trusted_contact_add_limit">You cannot add more than 5 trusted contacts.</string>
    <string name="permision">Permission denied!</string>
    <string name="storage_permission_denied">Storage permission denied!</string>
    <string name="submitting_feedback">Submitting feedback..</string>
    <string name="add_contact">Add Contact</string>
    <string name="alert">Alert</string>
    <string name="search_country_name">Search Country</string>
    <string name="updating_profile">Updating Profile...</string>
    <string name="logout">Logout</string>
    <string name="nav_logout">LOGOUT</string>
    <string name="send_email_with_dot">Send email...</string>
    <string name="sending_email_with_dot">Sending email...</string>
    <string name="invalid_fields">Invalid Name, your changes will be lost</string>
    <string name="save_change_confirmation">Do you want to save changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="verify_account">Verify Account</string>
    <string name="cant_login_from_FB">Couldn\'t log in to facebook account</string>
    <string name="forgot_password_button_clicked">Forgot Password button Clicked</string>
    <string name="forgot_password_button">Forgot Password button</string>
    <string name="invalid_otp">Invalid OTP, please try again.</string>
    <string name="signUp_logIn">LOGIN</string>
    <string name="home">HOME</string>
    <string name="my_redbrics">MY CLICBRICS</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="favorite_list">FAVORITES</string>
    <string name="recently_viewed">RECENTLY VIEWED</string>
    <string name="saved_searches">SAVED SEARCHES</string>
    <string name="tab_saved_searches">SAVED \nSEARCHES</string>
    <string name="recent_search">RECENT SEARCHES</string>
    <string name="rate_app">RATE THIS APP</string>
    <string name="settings">SETTINGS</string>
    <string name="password_short">Password should have minimum 1 characters!</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="title_activity_property_detail">Property Detail</string>
    <string name="about_project">About Project</string>
    <string name="developer">Developer</string>
    <string name="possession">Possession</string>
    <string name="groceries">Groceries</string>
    <string name="schools">Schools</string>
    <string name="parks">Parks</string>
    <string name="atm">ATMs</string>
    <string name="restaurants">Restaurants</string>
    <string name="hospitals">Hospitals</string>
    <string name="bus_stops">Bus Stops</string>
    <string name="railways">Railways</string>
    <string name="airports">Airports</string>
    <string name="normal_map_view">Normal</string>
    <string name="satellite_map_view">Satellite</string>
    <string name="hybrid_map_view">Hybrid</string>
    <string name="no_results_found">NO RESULTS FOUND</string>
    <string name="no_results_full">Sorry we couldn’t find any results matching\nthe criteria you just entered. Let’s try changing\n your search area.</string>
    <string name="try_again_btn">TRY AGAIN</string>
    <string name="petrol_pumps">Petrol Pumps</string>
</resources>