<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/gray_600"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text_yellow"
        android:textCursorDrawable="@drawable/edittext_cursor_color"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/gray_600"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text_yellow"
        android:textCursorDrawable="@drawable/edittext_cursor_color"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/invalidConfirmPassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_does_not_match"
        android:textSize="14sp"
        android:textColor="@color/red_dark"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:layout_marginLeft="10dp"/>
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancelaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:padding="15dp"
            android:background="@drawable/btn_white"
            android:textColor="@color/black"
            android:clickable="true"
            android:onClick="cancel"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right" >
            <TextView
                android:id="@+id/submitaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/submit"
                android:textColor="@drawable/button_red_selector"
                android:textStyle="bold"
                android:padding="15dp"
                android:background="@drawable/button_yellow_selector"
                android:clickable="true"
                android:onClick="submit"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>