<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_40"
    android:background="@color/gray_300"
    tools:ignore="MissingPrefix">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        fontPath="fonts/FiraSans-SemiBold.ttf"
        android:textSize="20sp"
        android:textColor="@color/gray_800"
        android:text="@string/no_results_found"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_results"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/no_results_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results_full"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/gray_800"
        android:textSize="14sp"
        fontPath="fonts/FiraSans-Book.ttf"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/id_try_again_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:background="@drawable/pick_time_btn_selector"
        android:text="@string/try_again_btn"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        fontPath="fonts/FiraSans-Medium.ttf"/>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"/>

</LinearLayout>